data/diff_tests/wasmtime/unreachable_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1696.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\60"
    "\00\01\7f\60\00\01\7d\02\ab\80\80\80\00\02\03\65"
    "\6e\76\0e\69\6d\70\6f\72\74\65\64\5f\66\75\6e\63"
    "\31\00\00\03\65\6e\76\0e\69\6d\70\6f\72\74\65\64"
    "\5f\66\75\6e\63\32\00\01\03\82\80\80\80\00\01\00"
    "\0a\8f\80\80\80\00\01\89\80\80\80\00\00\10\00\10"
    "\01\00\41\00\0b"
  )
""
)